--- a/regform.html
+++ b/regform.html
@@ -21,15 +21,6 @@
             border-radius: 5px;
         }
 
-        a {
-            text-decoration: none;
-            padding: 5px;
-            background: green;
-            color: white;
-            border-radius: 5px;
-            margin-left: 150px;
-        }
-
         .submit {
             margin-left: 50px;
         }
@@ -38,6 +29,25 @@
 </head>
 
 <body>
+
+    <ul>
+        <li>
+            <a href="index.html"><i>Home</i></a>
+        </li>
+        <li>
+            <a href="exercise.html"><i>About Us</i></a>
+        </li>
+        <li>
+            <a href="assignment.html"><i>Contact Us</i></a>
+        </li>
+        <li>
+            <a href="assignment2.html"><i>Service</i></a>
+        </li>
+        <li>
+            <a href="regform.html"><i>Register</i></a>
+        </li>
+    </ul>
+    <br><br>
 
     <table border="2" cellpadding="10">
 
@@ -115,9 +125,6 @@
     </table>
 
     <br><br>
-
-    <a href="formassign.html">Form Assignment</a>
-
 </body>
 
 </html>
