--- a/assignment.html
+++ b/assignment.html
@@ -7,22 +7,49 @@
     <title>assignment</title>
 
     <style>
-        .next {
-            text-decoration: none;
-            padding: 10px;
-            background: green;
-            color: white;
+        button {
             border-radius: 5px;
+            background: rgb(131, 37, 37);
+            color: white;
+            padding: 5px;
         }
 
-        a {
-            text-decoration: none;
+        .submit {
+            border-radius: 5px;
+            background: rgb(131, 37, 37);
+            color: white;
+            padding: 5px;
+            margin-left: 330px;
+        }
+
+        body {
+            background: antiquewhite;
         }
     </style>
 
 </head>
 
 <body>
+
+
+    <ul>
+        <li>
+            <a href="index.html"><i>Home</i></a>
+        </li>
+        <li>
+            <a href="exercise.html"><i>About Us</i></a>
+        </li>
+        <li>
+            <a href="assignment.html"><i>Contact Us</i></a>
+        </li>
+        <li>
+            <a href="assignment2.html"><i>Service</i></a>
+        </li>
+        <li>
+            <a href="regform.html"><i>Register</i></a>
+        </li>
+    </ul>
+    <br><br>
 
     <center>
         <h1 style="color: gold;background: rgb(57, 78, 78);">
@@ -73,25 +100,117 @@
 
     <h2>Why Choose WhoGoHost</h2>
 
-    <p>Over are years 40,000+ Companies and institutions have trusted us to deliver excellent services</p>
+    <p>Over are years 40,000+ Companies and institutions have trusted us to deliver excellent services
+
+    </p>
 
     <h2>West Africa's No.1 Hosting Provider</h2>
 
     <p>We are West Africa's largest and most popular web hosting provide, supporting businesses, enterprises and
-        individuals for paste 12 years and counting</p>
+        individuals for paste 12 years and counting
+    </p>
 
     <h2>Wide Range Of Offerings</h2>
 
     <p>With growing number of offerings, we are your one-step shop for anything you and your business needs to suceed
-        online</p>
-
-    <br><br>
-
-    <center>
-        <a href="assignment2.html" class="next">NEXT PAGE</a>
-    </center>
+        online
+    </p>
 
 
+    <br><br><br>
+    <h1>Student Data Entry Form</h1>
+
+    <form>
+
+        <label for="name">Student Name:</label>
+        <input type="text" Id="name" placeholder="Student Name" required><br><br>
+
+        <label for="email">Email:</label>
+        <input type="text" Id="email" placeholder="Email" required><br><br>
+
+        <label for="gender">Gender:</label>
+        <input type="radio" name="gender" required>
+        <label for="boy">Boy</label>
+        <input type="radio" name="gender" required>
+        <label for="boy">Girl</label><br><br>
+
+        <label for="subject">Subjects:</label>
+        <input type="checkbox" name="tamil">
+        <label for="tamil">Tamil</label>
+        <input type="checkbox" name="telugu">
+        <label for="telugu">Telugu</label>
+        <input type="checkbox" name="eng">
+        <label for="eng">English</label>
+        <input type="checkbox" name="phy">
+        <label for="phy">Physics</label>
+        <input type="checkbox" name="eco">
+        <label for="eco">Econimics</label>
+
+        <br><br>
+
+        <label for="city">City / Town:</label>
+
+        <select name="cities" id="city">
+            <option value="choose">Choose One</option>
+            <option value="ibd">Ibadan</option>
+            <option value="akure">Akure</option>
+            <option value="ikj">Ikeja</option>
+            <option value="osodi">Osodi</option>
+        </select><br><br>
+
+        <label for="comment">Comments:</label><br>
+        <textarea name="comment" id="comment" cols="60" rows="10" placeholder="Comments" required></textarea>
+        <br><br>
+
+        <button type="button">CLEAR</button>
+        <input type="submit" value="SUBMIT" class="submit"><br><br>
+    </form>
+    <br><br><br>
+    <table border="2" cellpadding="20">
+
+        <tr>
+            <th>Text</th>
+            <th>Text</th>
+            <th colspan="2">
+                <center>Text</center>
+            </th>
+            <th colspan="2">
+                <center>Text</center>
+            </th>
+        </tr>
+
+        <tr>
+            <td><sup>Text</sup></td>
+            <td><sub>Text</sub></td>
+            <td colspan="2"><sub>Text</sub></td>
+            <td>Text</td>
+            <td>Text</td>
+        </tr>
+
+        <tr>
+            <td rowspan="2">Text</td>
+            <td rowspan="2"><sup>Text</sup></td>
+            <td><sup>Text</sup></td>
+            <td><sup>Text</sup></td>
+            <td>Text</td>
+            <td>Text</td>
+        </tr>
+
+        <tr>
+            <td rowspan="2">Text</td>
+            <td rowspan="2">Text</td>
+            <td>Text</td>
+            <td>Text</td>
+        </tr>
+
+        <tr>
+            <td><sub>Text</sub></td>
+            <td><sup>Text</sup></td>
+            <td><sup>Text</sup></td>
+            <td><sup>Text</sup></td>
+        </tr>
+
+    </table>
 </body>
 
 </html>
